--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Antonio Espinoza
-title: 
+title: Why I decided to learn Software Engineering
 header-img: img/home-bg.png
 email: aespinoza777@gmail.com
 copyright_name: Antonio Espinoza
 description: > # this means to ignore newlines until "baseurl:"
-  
+  My New Path
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  aespinoza777
